	Renamed as tools/check-header.c and set it as ignored by git.

	* src/test/.gitignore:
	* src/test/Makefile.am: Updated accordingly.

	* Makefile.am:
	* configure.ac: configure in tools/.

2011-01-14 Pierre Wieser <pwieser@trychlos.org>

	* src/utils/nautilus-actions-new.c:
	* src/utils/nautilus-actions-run.c:
	* src/utils/nautilus-actions-schemas.c: Add locale.h include.

	* src/nact/nact-gtk-utils.c:
	* src/nact/nact-gtk-utils.h (nact_gtk_utils_select_file,
	nact_gtk_utils_select_file_with_preview, nact_gtk_utils_select_dir):
	Remove no more used default value.

	* src/nact/nact-icommand-tab.c (on_path_browse, on_wdir_browse):
	* src/nact/nact-ienvironment-tab.c (on_try_exec_browse,
	on_show_if_running_browse): Updated accordingly.

	* src/core/na-boxed.c (string_list_from_array, uint_list_from_array):
	Do not allocate the empty last element.

	* src/core/na-io-provider.c (load_items_get_merged_list):
	* src/core/na-iprefs.c (na_iprefs_get_io_providers):
	Use the correct list pointer.

	* src/core/na-iprefs.c:
	* src/core/na-iprefs.h
	(na_iprefs_get_export_format, na_iprefs_set_export_format):
	Functions moved from src/nact/nact-iprefs.c.

	* src/nact/nact-iprefs.c:
	* src/nact/nact-iprefs.h: Removed files.

	* src/nact/Makefile.am:
	* src/nact/base-window.c:
	* src/nact/nact-assistant-export.c:
	* src/nact/nact-assistant-import.c:
	* src/nact/nact-clipboard.c:
	* src/nact/nact-export-ask.c:
	* src/nact/nact-export-format.c:
	* src/nact/nact-gtk-utils.c:
	* src/nact/nact-iaction-tab.c:
	* src/nact/nact-icommand-tab.c:
	* src/nact/nact-ifolders-tab.c:
	* src/nact/nact-main-toolbar.c:
	* src/nact/nact-preferences-editor.c:
	* src/nact/nact-tree-model-dnd.c: Updated accordingly.

	* src/nact/nact-iprefs.c:
	* src/nact/nact-iprefs.h (nact_iprefs_write_bool, nact_iprefs_write_uint,
	nact_iprefs_write_string): Remove deprecated functions.

	* src/nact/nact-main-toolbar.c (nact_main_toolbar_activate):
	Updated accordingly.

	* src/nact/base-iprefs.c: