@@ -99,25 +99,25 @@ GType na_settings_get_type( void );
 #define NA_IPREFS_ASSISTANT_ESC_QUIT			"assistant-esc-quit"
 #define NA_IPREFS_CAPABILITY_ADD_CAPABILITY_WSP	"capability-add-capability-wsp"
 #define NA_IPREFS_COMMAND_CHOOSER_WSP			"command-command-chooser-wsp"
-#define NA_IPREFS_COMMAND_CHOOSER_URI			"command-command-chooser-last-folder-uri"
+#define NA_IPREFS_COMMAND_CHOOSER_URI			"command-command-chooser-lfu"
 #define NA_IPREFS_COMMAND_LEGEND_WSP			"command-legend-wsp"
 #define NA_IPREFS_WORKING_DIR_WSP				"command-working-dir-chooser-wsp"
-#define NA_IPREFS_WORKING_DIR_URI				"command-working-dir-chooser-last-folder-uri"
+#define NA_IPREFS_WORKING_DIR_URI				"command-working-dir-chooser-lfu"
 #define NA_IPREFS_SHOW_IF_RUNNING_WSP			"environment-show-if-running-wsp"
-#define NA_IPREFS_SHOW_IF_RUNNING_URI			"environment-show-if-running-last-folder-uri"
+#define NA_IPREFS_SHOW_IF_RUNNING_URI			"environment-show-if-running-lfu"
 #define NA_IPREFS_TRY_EXEC_WSP					"environment-try-exec-wsp"
-#define NA_IPREFS_TRY_EXEC_URI					"environment-try-exec-last-folder-uri"
+#define NA_IPREFS_TRY_EXEC_URI					"environment-try-exec-lfu"
 #define NA_IPREFS_EXPORT_ASK_USER_WSP			"export-ask-user-wsp"
 #define NA_IPREFS_EXPORT_ASK_USER_LAST_FORMAT	"export-ask-user-last-format"
 #define NA_IPREFS_EXPORT_ASSISTANT_WSP			"export-assistant-wsp"
-#define NA_IPREFS_EXPORT_ASSISTANT_URI			"export-assistant-last-folder-uri"
+#define NA_IPREFS_EXPORT_ASSISTANT_URI			"export-assistant-lfu"
 #define NA_IPREFS_EXPORT_PREFERRED_FORMAT		"export-preferred-format"
 #define NA_IPREFS_FOLDER_CHOOSER_WSP			"folder-chooser-wsp"
-#define NA_IPREFS_FOLDER_CHOOSER_URI			"folder-chooser-last-folder-uri"
+#define NA_IPREFS_FOLDER_CHOOSER_URI			"folder-chooser-lfu"
 #define NA_IPREFS_IMPORT_ASK_USER_WSP			"import-ask-user-wsp"
 #define NA_IPREFS_IMPORT_ASK_USER_LAST_MODE		"import-ask-user-last-mode"
 #define NA_IPREFS_IMPORT_ASSISTANT_WSP			"import-assistant-wsp"
-#define NA_IPREFS_IMPORT_ASSISTANT_URI			"import-assistant-last-folder-uri"
+#define NA_IPREFS_IMPORT_ASSISTANT_URI			"import-assistant-lfu"
 #define NA_IPREFS_IMPORT_MODE_KEEP_LAST_CHOICE	"import-mode-keep-last-choice"
 #define NA_IPREFS_IMPORT_PREFERRED_MODE			"import-preferred-mode"
 #define NA_IPREFS_ICON_CHOOSER_URI				"item-icon-chooser-last-file-uri"
